--- a/Missing Value Estimation_1_CW_MH.ipynb
+++ b/Missing Value Estimation_1_CW_MH.ipynb
@@ -304,8 +304,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"MissingData1.csv\", header=None)\n",
-    "df"
+    "df = pd.read_csv(\"MissingData1.csv\", header=None)"
    ]
   },
   {
