--- a/Missing Value Estimation_2_CW_MH.ipynb
+++ b/Missing Value Estimation_2_CW_MH.ipynb
@@ -37,385 +37,9 @@
    "execution_count": 2,
    "id": "437e4eaf-9709-4cca-b7b4-7e7144af2ea9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>40</th>\n",
-       "      <th>41</th>\n",
-       "      <th>42</th>\n",
-       "      <th>43</th>\n",
-       "      <th>44</th>\n",
-       "      <th>45</th>\n",
-       "      <th>46</th>\n",
-       "      <th>47</th>\n",
-       "      <th>48</th>\n",
-       "      <th>49</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6.887280e-01</td>\n",
-       "      <td>-2.127199e-01</td>\n",
-       "      <td>4.987831e-01</td>\n",
-       "      <td>8.365271e-01</td>\n",
-       "      <td>0.753066</td>\n",
-       "      <td>-2.126668e-01</td>\n",
-       "      <td>9.427240e-01</td>\n",
-       "      <td>-0.452367</td>\n",
-       "      <td>-7.710111e-02</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.179593</td>\n",
-       "      <td>0.694768</td>\n",
-       "      <td>0.617762</td>\n",
-       "      <td>-0.040676</td>\n",
-       "      <td>6.780754e-02</td>\n",
-       "      <td>3.274521e-02</td>\n",
-       "      <td>7.016790e-01</td>\n",
-       "      <td>2.728153e-01</td>\n",
-       "      <td>2.429962e-01</td>\n",
-       "      <td>4.460160e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.102416e-01</td>\n",
-       "      <td>-2.191136e-01</td>\n",
-       "      <td>-7.928352e-03</td>\n",
-       "      <td>-0.126895</td>\n",
-       "      <td>3.124277e-01</td>\n",
-       "      <td>2.054785e-01</td>\n",
-       "      <td>0.228858</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.524070e-01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.231804</td>\n",
-       "      <td>-0.004617</td>\n",
-       "      <td>-0.483945</td>\n",
-       "      <td>-0.056103</td>\n",
-       "      <td>-3.241404e-01</td>\n",
-       "      <td>-1.524204e-01</td>\n",
-       "      <td>-2.592350e-01</td>\n",
-       "      <td>-1.520412e-01</td>\n",
-       "      <td>-4.871650e-01</td>\n",
-       "      <td>-6.009698e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-7.389290e-01</td>\n",
-       "      <td>-1.099149e-01</td>\n",
-       "      <td>-5.847262e-01</td>\n",
-       "      <td>1.849009e-01</td>\n",
-       "      <td>-0.124804</td>\n",
-       "      <td>-1.822229e-01</td>\n",
-       "      <td>1.069205e-01</td>\n",
-       "      <td>-0.280529</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>-3.794978e-01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.278944</td>\n",
-       "      <td>-0.178492</td>\n",
-       "      <td>-0.109231</td>\n",
-       "      <td>-0.030136</td>\n",
-       "      <td>-2.762238e-01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>-2.225672e-01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>-1.804177e-01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2.455752e-01</td>\n",
-       "      <td>-7.399092e-02</td>\n",
-       "      <td>-3.172125e-01</td>\n",
-       "      <td>-2.382372e-01</td>\n",
-       "      <td>-0.234355</td>\n",
-       "      <td>-4.551269e-01</td>\n",
-       "      <td>-3.268785e-01</td>\n",
-       "      <td>-0.493662</td>\n",
-       "      <td>-1.230997e-01</td>\n",
-       "      <td>-3.809401e-01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.353774</td>\n",
-       "      <td>0.285639</td>\n",
-       "      <td>0.233876</td>\n",
-       "      <td>0.088700</td>\n",
-       "      <td>-2.583937e-02</td>\n",
-       "      <td>-3.225317e-01</td>\n",
-       "      <td>4.335860e-01</td>\n",
-       "      <td>3.236030e-01</td>\n",
-       "      <td>3.608772e-01</td>\n",
-       "      <td>2.369610e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.395104e-01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>2.833654e-01</td>\n",
-       "      <td>4.775463e-02</td>\n",
-       "      <td>0.235801</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>-0.216095</td>\n",
-       "      <td>-2.471665e-01</td>\n",
-       "      <td>1.670562e-01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.237784</td>\n",
-       "      <td>0.439557</td>\n",
-       "      <td>-0.006479</td>\n",
-       "      <td>-0.157518</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>6.308964e-02</td>\n",
-       "      <td>7.612676e-01</td>\n",
-       "      <td>3.216442e-01</td>\n",
-       "      <td>1.993160e-01</td>\n",
-       "      <td>-2.375341e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>753</th>\n",
-       "      <td>1.479145e-01</td>\n",
-       "      <td>-1.462699e-01</td>\n",
-       "      <td>7.680233e-02</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>0.200007</td>\n",
-       "      <td>-1.774621e-01</td>\n",
-       "      <td>4.605579e-01</td>\n",
-       "      <td>0.003164</td>\n",
-       "      <td>3.931340e-01</td>\n",
-       "      <td>2.113047e-01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.019922</td>\n",
-       "      <td>0.591618</td>\n",
-       "      <td>0.128843</td>\n",
-       "      <td>0.041614</td>\n",
-       "      <td>1.377971e-01</td>\n",
-       "      <td>-2.400275e-02</td>\n",
-       "      <td>6.464135e-01</td>\n",
-       "      <td>5.693558e-02</td>\n",
-       "      <td>1.570913e-01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>754</th>\n",
-       "      <td>-4.498707e-01</td>\n",
-       "      <td>4.658433e-01</td>\n",
-       "      <td>6.745856e-01</td>\n",
-       "      <td>2.083206e-01</td>\n",
-       "      <td>0.208008</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>5.843915e-01</td>\n",
-       "      <td>-0.081353</td>\n",
-       "      <td>5.232338e-01</td>\n",
-       "      <td>-7.907323e-01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.075985</td>\n",
-       "      <td>0.105754</td>\n",
-       "      <td>1.093120</td>\n",
-       "      <td>0.670867</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>2.610480e-01</td>\n",
-       "      <td>3.860916e-01</td>\n",
-       "      <td>4.945912e-01</td>\n",
-       "      <td>1.053865e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>755</th>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>2.781739e-01</td>\n",
-       "      <td>5.073262e-03</td>\n",
-       "      <td>7.802103e-01</td>\n",
-       "      <td>0.193115</td>\n",
-       "      <td>1.858721e-01</td>\n",
-       "      <td>1.035979e+00</td>\n",
-       "      <td>-0.073586</td>\n",
-       "      <td>2.028141e-01</td>\n",
-       "      <td>4.120569e-01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.076009</td>\n",
-       "      <td>0.814107</td>\n",
-       "      <td>0.298956</td>\n",
-       "      <td>-0.023306</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>8.665753e-03</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.968879e-01</td>\n",
-       "      <td>1.637549e-01</td>\n",
-       "      <td>-4.069241e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>756</th>\n",
-       "      <td>2.400355e-01</td>\n",
-       "      <td>1.146974e-01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>5.982808e-01</td>\n",
-       "      <td>0.140374</td>\n",
-       "      <td>2.103118e-01</td>\n",
-       "      <td>8.799644e-01</td>\n",
-       "      <td>-0.051509</td>\n",
-       "      <td>4.982374e-01</td>\n",
-       "      <td>3.733896e-01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.049314</td>\n",
-       "      <td>0.785388</td>\n",
-       "      <td>0.194695</td>\n",
-       "      <td>0.055395</td>\n",
-       "      <td>2.235817e-01</td>\n",
-       "      <td>5.621653e-01</td>\n",
-       "      <td>5.278635e-01</td>\n",
-       "      <td>4.154549e-01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>-4.473563e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>757</th>\n",
-       "      <td>-3.444515e-01</td>\n",
-       "      <td>-5.628683e-03</td>\n",
-       "      <td>-4.868051e-01</td>\n",
-       "      <td>-6.553081e-01</td>\n",
-       "      <td>-0.536342</td>\n",
-       "      <td>-3.372525e-01</td>\n",
-       "      <td>-5.896070e-01</td>\n",
-       "      <td>-0.380977</td>\n",
-       "      <td>9.722100e-02</td>\n",
-       "      <td>-6.677120e-01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.732214</td>\n",
-       "      <td>-0.363007</td>\n",
-       "      <td>-0.579639</td>\n",
-       "      <td>-0.684276</td>\n",
-       "      <td>-1.090374e-01</td>\n",
-       "      <td>3.121913e-02</td>\n",
-       "      <td>-2.734336e-01</td>\n",
-       "      <td>-1.219368e-01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>758 rows × 50 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               0             1             2             3         4   \\\n",
-       "0    6.887280e-01 -2.127199e-01  4.987831e-01  8.365271e-01  0.753066   \n",
-       "1    1.000000e+99  1.102416e-01 -2.191136e-01 -7.928352e-03 -0.126895   \n",
-       "2   -7.389290e-01 -1.099149e-01 -5.847262e-01  1.849009e-01 -0.124804   \n",
-       "3    2.455752e-01 -7.399092e-02 -3.172125e-01 -2.382372e-01 -0.234355   \n",
-       "4    2.395104e-01  1.000000e+99  2.833654e-01  4.775463e-02  0.235801   \n",
-       "..            ...           ...           ...           ...       ...   \n",
-       "753  1.479145e-01 -1.462699e-01  7.680233e-02  1.000000e+99  0.200007   \n",
-       "754 -4.498707e-01  4.658433e-01  6.745856e-01  2.083206e-01  0.208008   \n",
-       "755  1.000000e+99  2.781739e-01  5.073262e-03  7.802103e-01  0.193115   \n",
-       "756  2.400355e-01  1.146974e-01  1.000000e+99  5.982808e-01  0.140374   \n",
-       "757 -3.444515e-01 -5.628683e-03 -4.868051e-01 -6.553081e-01 -0.536342   \n",
-       "\n",
-       "               5             6         7             8             9   ...  \\\n",
-       "0   -2.126668e-01  9.427240e-01 -0.452367 -7.710111e-02  1.000000e+99  ...   \n",
-       "1    3.124277e-01  2.054785e-01  0.228858  1.000000e+99  1.524070e-01  ...   \n",
-       "2   -1.822229e-01  1.069205e-01 -0.280529  1.000000e+99 -3.794978e-01  ...   \n",
-       "3   -4.551269e-01 -3.268785e-01 -0.493662 -1.230997e-01 -3.809401e-01  ...   \n",
-       "4    1.000000e+99  1.000000e+99 -0.216095 -2.471665e-01  1.670562e-01  ...   \n",
-       "..            ...           ...       ...           ...           ...  ...   \n",
-       "753 -1.774621e-01  4.605579e-01  0.003164  3.931340e-01  2.113047e-01  ...   \n",
-       "754  1.000000e+99  5.843915e-01 -0.081353  5.232338e-01 -7.907323e-01  ...   \n",
-       "755  1.858721e-01  1.035979e+00 -0.073586  2.028141e-01  4.120569e-01  ...   \n",
-       "756  2.103118e-01  8.799644e-01 -0.051509  4.982374e-01  3.733896e-01  ...   \n",
-       "757 -3.372525e-01 -5.896070e-01 -0.380977  9.722100e-02 -6.677120e-01  ...   \n",
-       "\n",
-       "           40        41        42        43            44            45  \\\n",
-       "0    0.179593  0.694768  0.617762 -0.040676  6.780754e-02  3.274521e-02   \n",
-       "1   -0.231804 -0.004617 -0.483945 -0.056103 -3.241404e-01 -1.524204e-01   \n",
-       "2   -0.278944 -0.178492 -0.109231 -0.030136 -2.762238e-01  1.000000e+99   \n",
-       "3    0.353774  0.285639  0.233876  0.088700 -2.583937e-02 -3.225317e-01   \n",
-       "4    0.237784  0.439557 -0.006479 -0.157518  1.000000e+99  6.308964e-02   \n",
-       "..        ...       ...       ...       ...           ...           ...   \n",
-       "753  0.019922  0.591618  0.128843  0.041614  1.377971e-01 -2.400275e-02   \n",
-       "754 -0.075985  0.105754  1.093120  0.670867  1.000000e+99  2.610480e-01   \n",
-       "755  0.076009  0.814107  0.298956 -0.023306  1.000000e+99  8.665753e-03   \n",
-       "756 -0.049314  0.785388  0.194695  0.055395  2.235817e-01  5.621653e-01   \n",
-       "757 -0.732214 -0.363007 -0.579639 -0.684276 -1.090374e-01  3.121913e-02   \n",
-       "\n",
-       "               46            47            48            49  \n",
-       "0    7.016790e-01  2.728153e-01  2.429962e-01  4.460160e-02  \n",
-       "1   -2.592350e-01 -1.520412e-01 -4.871650e-01 -6.009698e-01  \n",
-       "2   -2.225672e-01  1.000000e+99 -1.804177e-01  1.000000e+99  \n",
-       "3    4.335860e-01  3.236030e-01  3.608772e-01  2.369610e-01  \n",
-       "4    7.612676e-01  3.216442e-01  1.993160e-01 -2.375341e-02  \n",
-       "..            ...           ...           ...           ...  \n",
-       "753  6.464135e-01  5.693558e-02  1.570913e-01  1.000000e+99  \n",
-       "754  3.860916e-01  4.945912e-01  1.053865e+00  1.000000e+99  \n",
-       "755  1.000000e+99  1.968879e-01  1.637549e-01 -4.069241e-01  \n",
-       "756  5.278635e-01  4.154549e-01  1.000000e+99 -4.473563e-01  \n",
-       "757 -2.734336e-01 -1.219368e-01  1.000000e+99  1.000000e+99  \n",
-       "\n",
-       "[758 rows x 50 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv(\"MissingData2.csv\", header=None)\n",
-    "df"
+    "df = pd.read_csv(\"MissingData2.csv\", header=None)"
    ]
   },
   {
