--- a/Missing Value Estimation_3_CW_MH.ipynb
+++ b/Missing Value Estimation_3_CW_MH.ipynb
@@ -37,398 +37,9 @@
    "execution_count": 2,
    "id": "437e4eaf-9709-4cca-b7b4-7e7144af2ea9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>69</th>\n",
-       "      <th>70</th>\n",
-       "      <th>71</th>\n",
-       "      <th>72</th>\n",
-       "      <th>73</th>\n",
-       "      <th>74</th>\n",
-       "      <th>75</th>\n",
-       "      <th>76</th>\n",
-       "      <th>77</th>\n",
-       "      <th>78</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.014568e+01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>8.646739e+00</td>\n",
-       "      <td>7.446256e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>6.655352e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.100000e+01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>8.000000e+00</td>\n",
-       "      <td>7.000000e+00</td>\n",
-       "      <td>1.000000e+01</td>\n",
-       "      <td>6.000000e+00</td>\n",
-       "      <td>6.000000e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>4.000000e+00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.186171e+01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>8.862947e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>5.000000e+00</td>\n",
-       "      <td>5.000000e+00</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.199900e+01</td>\n",
-       "      <td>1.000000e+01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.100000e+01</td>\n",
-       "      <td>6.405992e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>4.000000e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>4.000000e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.000000e+01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>9.000000e+00</td>\n",
-       "      <td>7.584963e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>7.000000e+00</td>\n",
-       "      <td>8.000000e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>268</th>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.059614e+01</td>\n",
-       "      <td>1.161112e+01</td>\n",
-       "      <td>1.107396e+01</td>\n",
-       "      <td>1.116992e+01</td>\n",
-       "      <td>7.333421e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>9.592793e+00</td>\n",
-       "      <td>1.199900e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>269</th>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>7.546729e+00</td>\n",
-       "      <td>7.094387e+00</td>\n",
-       "      <td>6.611122e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>7.000000e+00</td>\n",
-       "      <td>1.066658e+01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.111859e+01</td>\n",
-       "      <td>9.081794e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>270</th>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>9.546729e+00</td>\n",
-       "      <td>1.059614e+01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.073697e+01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.199900e+01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.199900e+01</td>\n",
-       "      <td>1.028663e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>271</th>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>9.546729e+00</td>\n",
-       "      <td>9.596136e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>9.222392e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.100018e+01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.145219e+01</td>\n",
-       "      <td>8.081794e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>272</th>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>8.708617e+00</td>\n",
-       "      <td>8.888918e+00</td>\n",
-       "      <td>1.038873e+01</td>\n",
-       "      <td>9.070389e+00</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.172337e+01</td>\n",
-       "      <td>1.000000e+99</td>\n",
-       "      <td>1.199900e+01</td>\n",
-       "      <td>9.620586e+00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>273 rows × 79 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               0             1             2             3             4   \\\n",
-       "0    1.014568e+01  1.000000e+99  1.000000e+99  8.646739e+00  7.446256e+00   \n",
-       "1    1.100000e+01  1.000000e+99  1.000000e+99  8.000000e+00  7.000000e+00   \n",
-       "2    1.186171e+01  1.000000e+99  1.000000e+99  1.000000e+99  8.862947e+00   \n",
-       "3    1.199900e+01  1.000000e+01  1.000000e+99  1.100000e+01  6.405992e+00   \n",
-       "4    1.000000e+01  1.000000e+99  1.000000e+99  9.000000e+00  7.584963e+00   \n",
-       "..            ...           ...           ...           ...           ...   \n",
-       "268  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "269  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "270  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "271  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "272  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "\n",
-       "               5             6             7             8             9   \\\n",
-       "0    1.000000e+99  1.000000e+99  6.655352e+00  1.000000e+99  1.000000e+99   \n",
-       "1    1.000000e+01  6.000000e+00  6.000000e+00  1.000000e+99  4.000000e+00   \n",
-       "2    1.000000e+99  1.000000e+99  1.000000e+99  5.000000e+00  5.000000e+00   \n",
-       "3    1.000000e+99  4.000000e+00  1.000000e+99  4.000000e+00  1.000000e+99   \n",
-       "4    1.000000e+99  7.000000e+00  8.000000e+00  1.000000e+99  1.000000e+99   \n",
-       "..            ...           ...           ...           ...           ...   \n",
-       "268  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "269  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "270  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "271  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "272  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "\n",
-       "     ...            69            70            71            72  \\\n",
-       "0    ...  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "1    ...  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "2    ...  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "3    ...  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "4    ...  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "..   ...           ...           ...           ...           ...   \n",
-       "268  ...  1.000000e+99  1.000000e+99  1.059614e+01  1.161112e+01   \n",
-       "269  ...  1.000000e+99  7.546729e+00  7.094387e+00  6.611122e+00   \n",
-       "270  ...  1.000000e+99  9.546729e+00  1.059614e+01  1.000000e+99   \n",
-       "271  ...  1.000000e+99  9.546729e+00  9.596136e+00  1.000000e+99   \n",
-       "272  ...  1.000000e+99  8.708617e+00  8.888918e+00  1.038873e+01   \n",
-       "\n",
-       "               73            74            75            76            77  \\\n",
-       "0    1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "1    1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "2    1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "3    1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "4    1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99  1.000000e+99   \n",
-       "..            ...           ...           ...           ...           ...   \n",
-       "268  1.107396e+01  1.116992e+01  7.333421e+00  1.000000e+99  9.592793e+00   \n",
-       "269  1.000000e+99  7.000000e+00  1.066658e+01  1.000000e+99  1.111859e+01   \n",
-       "270  1.073697e+01  1.000000e+99  1.199900e+01  1.000000e+99  1.199900e+01   \n",
-       "271  9.222392e+00  1.000000e+99  1.100018e+01  1.000000e+99  1.145219e+01   \n",
-       "272  9.070389e+00  1.000000e+99  1.172337e+01  1.000000e+99  1.199900e+01   \n",
-       "\n",
-       "               78  \n",
-       "0    1.000000e+99  \n",
-       "1    1.000000e+99  \n",
-       "2    1.000000e+99  \n",
-       "3    1.000000e+99  \n",
-       "4    1.000000e+99  \n",
-       "..            ...  \n",
-       "268  1.199900e+01  \n",
-       "269  9.081794e+00  \n",
-       "270  1.028663e+01  \n",
-       "271  8.081794e+00  \n",
-       "272  9.620586e+00  \n",
-       "\n",
-       "[273 rows x 79 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv(\"MissingData3.csv\", header=None)\n",
-    "df"
+    "df = pd.read_csv(\"MissingData3.csv\", header=None)"
    ]
   },
   {
